SF-3326 Fix spacing of invite form on mobile

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/shared/share/share-control.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/shared/share/share-control.component.scss
@@ -20,7 +20,7 @@ p.mat-hint {
 form {
   display: flex;
   width: 100%;
-  column-gap: 20px;
+  gap: 20px;
   @include breakpoints.media-breakpoint-down(sm) {
     flex-direction: column;
   }
